--- a/public/static/styles/index.scss
+++ b/public/static/styles/index.scss
@@ -16,10 +16,6 @@ body {
 	// background-size: 100% 100%;
 }
 
-html {
-	height: 100%;
-}
-
 img {
 	-webkit-user-drag: none;
 	-khtml-user-drag: none;
