--- a/public/static/styles/navigationMenu.scss
+++ b/public/static/styles/navigationMenu.scss
@@ -15,6 +15,12 @@
 	transition: width 0.1s linear, box-shadow 0.1s linear, transform 0.1s linear;
 	opacity: 100%;
 	z-index: 9;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 	// .navigationMenuList {
 	// 	font-family: "Space Grotesk Bold";
 	// 	color: c.$off-white;
