--- a/public/static/styles/topBar.scss
+++ b/public/static/styles/topBar.scss
@@ -7,7 +7,7 @@
 	top: 0;
 	width: 100%;
 	color: white;
-	height: 100px;
+	height: c.$top-bar-height;
 	width: 100%;
 	z-index: 10;
 }
