--- a/public/static/styles/utilities/_constants.scss
+++ b/public/static/styles/utilities/_constants.scss
@@ -17,6 +17,10 @@ $light-blue-green: #73f1bc;
 $light-blue-green-transparent: #73f1bc90;
 $mars-rock-purple: #ae71a6;
 $footer-black: #0a0e12;
+$footer-black-transparent: #0a0e12c4;
+$projects-header-black: #12161b;
+
 
 $navigaton-bar-width: 300px;
 $footer-height: 100px;
+$top-bar-height: 50px;
